<resources>
    <string name="app_name">Seiko</string>
    <string name="app_name_debug">Seiko_Debug</string>
    <string name="crash_found">发现了 %s 个崩溃文件</string>
    <string name="crash_action">请在下方选择你的操作</string>
    <string name="crash_action_share">打包并分享</string>
    <string name="crash_action_delete_all">全部删除</string>
    <string name="crash_action_deleted">已全部删除!</string>
    <string name="tab_bot_list">BOT列表</string>
    <string name="tab_plugin_list">插件</string>
    <string name="tab_dic_list">伪代码</string>
    <string name="tab_settings">设置</string>
    <string name="save_code_btn_text">保存</string>
    <string name="code_file_name_init">未命名.seiko</string>
    <string name="qq_QAuxiliary">若您的 QQ 已安装 QAuxiliary，请勾选&quot;去除相册扫码登录检验&quot;后截图扫码。\n若未安装请点击下面的&quot;发送到…&quot;发送到电脑上然后打开QQ进行扫码></string>
    <string name="help">帮助</string>
    <string name="retry">重试</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="share_to">发送到…</string>
    <string name="login_hint_qq">请输入账号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_use_qrscan">使用扫码登录</string>
    <string name="login_protocol_text">登录协议</string>
    <string name="login_success">Bot: %s 登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_fail_reason">%s\n完整日志请查看BOT日志</string>
    <string name="login_fail_reason_unknown">BOT登录时发生未知异常</string>
    <string name="login_process">登录中… (%s)</string>
    <string name="login_process_message">请稍等片刻…</string>
    <string name="login_logout">用户操作，BOT主动下线!</string>
    <string name="login_title_create">添加账号</string>
    <string name="login_title_edit">编辑账号</string>
    <string name="login_qq_not_vaild">请输入合法的QQ号!</string>
    <string name="login_qq_exist">请勿输入已存在的QQ!</string>
    <string name="login_create_success">添加成功!</string>
    <string name="login_edit_success">修改成功!</string>
    <string name="fragment_login_add_bot_account">添加机器人账户</string>
    <string name="fragment_plugin_add_plugin">添加插件</string>
    <string name="slide_debug_title">滑块验证调试窗口</string>
    <string name="slide_debug_description">此对话框里的内容为 WebView 请求的所有 url。若滑块完成后白屏，请复制此对话框的内容并在 Seiko 的 Github 仓库下提交 issue</string>
    <string name="slide_toast">若滑块验证后白屏请点击右下角浮动按钮~</string>
    <string name="slide_cancelled">滑块验证被用户取消</string>
    <string name="sms_tips">我们已向 [%s %s] 发送了一条验证短信\n请在下方输入框内输入验证码后点击提交</string>
    <string name="sms_code_empty">验证码不能为空</string>
    <string name="sms_retry">请 %s 秒后重试</string>
    <string name="sms_cancelled">用户已取消设备SMS验证</string>
    <string name="qrscan_title">扫码登录: %s</string>
    <string name="qrscan_wait_for_confirm">扫码成功，等待客户端确认</string>
    <string name="qrscan_cancelled">扫码登录已被用户取消</string>
    <string name="qrscan_timeout">超时，自动取消扫码</string>
    <string name="qrscan_share_fail">保存图片失败: %s</string>
    <string name="bot_list_not_login">未登录</string>
    <string name="bot_list_no_such_bot_title">小小的警告</string>
    <string name="bot_list_no_such_bot">程序发现 Mirai 内建 Bot 存储库并没有这个账号: %s\nMirai 内建 Bot 存储库列表: %s\nSeiko 内部维护的Bot列表: %s\n若您遇到了这个弹窗，证明在几天之前有人触发了这个bug并且闪退。请前往Seiko的仓库提issue并截图此页面。</string>
    <string name="bot_list_action_export">导出登录信息</string>
    <string name="bot_list_action_edit">登录配置</string>
    <string name="bot_list_action_log">查看日志</string>
    <string name="bot_list_action_delete">删除BOT</string>
    <string name="bot_list_action_export_never_login">从未登陆过，无法获取到登录信息</string>
    <string name="bot_list_action_export_fail">导出信息失败…</string>
    <string name="bot_list_action_edit_online">请下线BOT然后再执行此操作!</string>
    <string name="bot_list_action_delete_online">请下线BOT然后再执行此操作!</string>
    <string name="bot_list_action_delete_success">删除完毕!</string>
    <string name="plugin_title">您要…</string>
    <string name="plugin_action_import_local">从本地导入</string>
    <string name="plugin_action_import_url">从网络导入</string>
    <string name="plugin_import_url_title">请输入插件下载链接</string>
    <string name="plugin_import_url_not_vaild">请正确填写链接</string>
    <string name="plugin_import_local_title">选择导入的插件</string>
    <string name="plugin_list_title">操作: %s</string>
    <string name="plugin_list_action_delete">删除插件</string>
    <string name="plugin_list_action_delete_success">删除成功!</string>
    <string name="plugin_list_action_delete_fail">内置插件不可删除</string>
    <string name="plugin_list_import_fail">导入失败</string>
    <string name="plugin_list_download_title">下载中…</string>
    <string name="plugin_list_download_message">请稍等片刻…</string>
    <string name="plugin_list_download_success">下载完成</string>
    <string name="plugin_list_exception">发生异常: %s</string>
    <string name="dic_load_error">解析 \'%s\' 时遇到问题!</string>
    <string name="dic_error">伪代码解析中存在问题！\n请单击关闭的伪代码条目开关以获取问题信息，单击文字以进行编辑</string>
    <string name="dic_title">您要…</string>
    <string name="dic_action_create">新建伪代码</string>
    <string name="dic_action_import">导入伪代码</string>
    <string name="dic_action_github">查看在线教程 (可能需要翻墙)</string>
    <string name="dic_action_gitee">查看在线教程 (无需翻墙)</string>
    <string name="dic_action_import_name">为导入的词库命名 (随机命名则为空)</string>
    <string name="dic_action_import_success">导入成功!</string>
    <string name="dic_action_import_fail">导入失败!</string>
    <string name="dic_edit_title">操作: %s</string>
    <string name="dic_edit_action_edit">编辑伪代码</string>
    <string name="dic_edit_action_delete">删除伪代码</string>
    <string name="dic_edit_action_delete_success">删除成功!</string>
    <string name="dic_edit_save_create">创建</string>
    <string name="dic_edit_save_edit">修改</string>
    <string name="dic_edit_input_name">输入词库文件名</string>
    <string name="dic_edit_input_not_empty">文件名不能为空</string>
    <string name="dic_edit_save_success">保存成功!</string>
    <string name="dic_edit_save_fail">保存失败!</string>
    <string name="dic_edit_create_success">新建成功!</string>
    <string name="dic_edit_create_fail">创建失败!</string>
    <string name="dic_edit_create_exist">已存在同名文件!</string>
    <string name="log_empty">今日未产生 Bot 日志</string>
    <string name="log_export_empty">并没有日志，不需要导出</string>
    <string name="log_export_success">导出成功!</string>
    <string name="log_export_fail">导出失败!</string>
    <string name="settings_auto_delete">自动删除</string>
    <string name="settings_auto_delete_bad_device_info_title">自动删除登录失败的设备信息文件</string>
    <string name="settings_auto_delete_bad_plugin_title">自动删除加载失败的插件</string>
    <string name="settings_auto_reload_dic_on_message_title">收到消息时自动重载伪代码</string>
    <string name="settings_log">日志</string>
    <string name="settings_merge_all_title">合并bot日志到一个文件夹</string>
    <string name="settings_max_num_title">设置日志页面最大记录数</string>
    <string name="settings_info">程序信息</string>
    <string name="settings_version_title">当前版本: %s (%s)</string>
    <string name="settings_version_summary">版本号: %s</string>
    <string name="settings_build_time_title">构建时间</string>
    <string name="settings_mirai_title">内嵌 Mirai 版本</string>
    <string name="settings_github_title">查看仓库</string>
    <string name="settings_github_summary">前往 Seiko 的 Github 仓库。获取最新版本 Seiko，审阅 Seiko 源码并提出建议
    </string>
    <string name="update_failed">更新检测失败...</string>
    <string name="settings_check_update_once_start">启动时检测更新</string>
    <string name="debug">高级</string>
    <string name="protocolSetting">登录协议参数设置</string>
    <string name="reset">重置</string>
    <string name="protocol_warning">
        此功能用于注入协议并避免风控。\n请不要随意修改里面的值。否则轻则无法登陆，重则封号斗罗。\nSeiko不提供此处字段，请前往Mirai的讨论群主动获取协议。
    </string>
</resources>