<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:gravity="center"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/qq_QAuxiliary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_error"
            android:id="@+id/dialog_qrlogin_src"/>

    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dialog_qrlogin_cancel"/>
    <Button
            android:text="@string/share_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dialog_qrlogin_share"/>
</LinearLayout>