<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_editKey"
            android:inputType="number"
            android:hint="@string/login_hint_qq"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:minHeight="48dp"/>
    <EditText
            android:id="@+id/dialog_editValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_hint_password"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dialog_useQRScan"
            app:layout_constraintTop_toTopOf="@id/dialog_useQRScan"
            app:layout_constraintBottom_toBottomOf="@id/dialog_useQRScan"
            android:minHeight="48dp"/>
    <CheckBox
            android:id="@+id/dialog_useQRScan"
            android:text="@string/login_use_qrscan"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_editKey"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/dialog_protocol_text"
            android:text="@string/login_protocol_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/dialog_protocol"
            app:layout_constraintBottom_toBottomOf="@id/dialog_protocol"
            app:layout_constraintStart_toStartOf="parent"/>
    <Spinner
            android:id="@+id/dialog_protocol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_editValue"
            app:layout_constraintStart_toEndOf="@id/dialog_protocol_text"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>