<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SMSActivity">
    <TextView
            android:text="@string/sms_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/activity_sms_message"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/activity_sms_verify"
            app:layout_constraintTop_toBottomOf="@+id/activity_sms_message" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/activity_sms_retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/activity_sms_verify"
            app:layout_constraintTop_toBottomOf="@+id/activity_sms_verify"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/activity_sms_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/activity_sms_verify"
            app:layout_constraintTop_toBottomOf="@+id/activity_sms_verify"/>
</androidx.constraintlayout.widget.ConstraintLayout>